<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mconomy</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Parola</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Inregistrare</string>
    <string name="welcome">"Bine ai venit!"</string>
    <string name="invalid_username">Nume utilizator invalid</string>
    <string name="invalid_password">Parola trebuie sa aiba mai mult de 5 caractere</string>
    <string name="login_failed">"Autentificarea a esuat"</string>
    <string name="autentificare">Autentificare</string>
    <string name="hello_blank_fragment">Salutare!</string>
    <string name="mconomy">Mconomy</string>
    <string name="microeconomie">Microeconomie</string>
    <string name="inapoi">Inapoi</string>
    <string name="rentabilitate">Rentabilitate</string>
    <string name="informatii">Informatii</string>
    <string name="calculeaza">Calculeaza</string>
    <string name="adauga_produs">Adauga produs</string>
    <string name="_0_00">0.00</string>
    <string name="inregistrare">Inregistrare</string>
    <string name="confirati_parola">Confirati parola</string>
    <string name="actiuni">Actiuni</string>
    <string name="economii_nationale">Economii nationale</string>
    <string name="deconectare">Deconectare</string>
    <string name="salveaza_lista_si_incepe_o_sesiune_noua">Salveaza lista si incepe o sesiune noua</string>
    <string name="vezi_listele">Vezi listele</string>
    <string name="mconomy_app">Mconomy App</string>
    <string name="cheltuieli_guvernamentale">Cheltuieli guvernamentale</string>
    <string name="importuri">Importuri</string>
    <string name="consum">Consum</string>
    <string name="exporturi">Exporturi</string>
    <string name="completati_campurile_goale_pentru_a_primi_informatii">Completati campurile goale pentru a primi informatii</string>
    <string name="investitii">Investitii</string>
    <string name="tipul_economiei_va_aparea_aici_dupa_generarea_calcului">** Tipul economiei va aparea aici dupa generarea calcului</string>
    <string name="_0_mil">0 mil</string>
    <string name="banca">Banca</string>
    <string name="credite">Credite</string>
    <string name="imprumuturi">Imprumuturi</string>
    <string name="profit_investitii">Profit/Investitii</string>
    <string name="afla_ce_iti_poate_oferi_banca">Află ce iți poate oferi banca</string>
    <string name="pib">PIB :</string>
    <string name="pgb">PGB :</string>
    <string name="pnb">PNB :</string>
    <string name="content_info"><it>Microeconomia</it> se ocupă cu studiul comportamentului economic al diferiților consumatori (teoria bugetară), al firmei (teoria producției) si problematica împărțirii bunurilor limitate si a venitului limitat. În cadrul microeconomiei indivizii sunt văzuți ca forță de muncă, ca și consumatori ai bunurilor produse, pe care aceștia le consumă cu scopul de a-și maximiza folosința. Unitățile de producție utilizează factorii de producție cum ar fi munca, capitalul, progresul științific cu scopul de a maximiza profitul.</string>
    <string name="li_inventar" tools:ignore="Typos"><b><li>Inventar:</li></b> este un proces de gestiune a stocului curent. Produsele vor fi adăugate într-o listă după ce fe va executa operațiunea de calcul al produsului dintre preț și cantitate. Lista va fi adăugate într-o bază de date globală</string>
    <string name="utilitatile_microeconomiei">Utilitățile microeconomiei și informații despre funcționalitățile din aplicație.</string>
    <string name="li_rentabilitate"><b><li>Rentabilitate:</li></b> Măsoară rata de rentabilitate a activelor instituţiilor sau companiilor. Se determină ca raport între profitul net şi activele la sfârşitul perioadei sau profit net şi media activelor (ROA).</string>
    <string name="li_cost_de_oportunitate"><b><li>Cost de oportunitate:</li></b> reprezintă valoarea celei mai bune dintre șansele sacrificate, la care se renunță atunci când se face o alegere oarecare. Cu alte cuvinte, el măsoară cea mai mare pierdere dintre variantele sacrificate, considerându-se că alegerea făcută constituie „câștigul”. Este valoarea sacrificiilor alegerilor efective, în condițiile resurselor date. Costul de oportunitate al unui bun este dat de ceea ce se sacrifica pentru a obtine acest bun. Alegerile sau deciziile au un anumit cost, deoarece atunci când se ia o anumită decizie și se optează în favoarea unei opțiuni, sunt sacrificate celelalte.</string>
    <string name="utilitatile_macroeconomiei">Utilitățile macroeconomiei și informații despre funcționalitățile din aplicație.</string>
    <string name="content_info2" tools:ignore="Typos"><it>Macroeconomia</it> este un domeniu al științelor economice. Spre deosebire de microeconomie, macroeconomia lucrează cu mărimi agregate, cercetează comportamentul economiei în general, cum ar fi venitul total sau gradul de ocupare al forței de muncă, rata inflației sau oscilațiile conjuncturale. Macroeconomia încearcă să găsească explicații pentru aceste oscilații, să găsească factorii de control relevanți și să stabilească dependențele acestora.</string>
    <string name="li_banca"><b><li>Banca:</li></b> este o instituție financiară care are ca obiect principal de activitate atragerea de depozite și acordarea de credite. Băncile sunt organizate sub forma unei societăți comerciale pe acțiuni și își desfășoară activitatea sub supravegherea băncii centrale. Activitatea bancară, cuprinzând atragerea de depozite și acordarea de credite ca operațiuni bancare principale, precum și serviciile bancare conexe și accesorii, este o activitate economică de interes public foarte atent reglementată. Băncile se constituie în majoritatea legislațiilor sub forma societăților pe acțiuni, iar la constituire fondatorii trebuie să dispună de un capital social care depăsește cu mult cerințele unei societăți pe acțiuni obișnuite.</string>
    <string name="li_economii_nationale"><b><li>Economia nationala:</li></b> reprezinta un sistem generalizat, complex de activitati economico-sociale aparute si desfasurate intre agentii economici intr-un cadru statal, determinat din punct de vedere istoric, politic, social si economic, pe suportul resurselor economice (componenta cantitativa) si a motivatiilor comportamentale (componenta calitativa) ale agentilor economici.Structura economiei reflecta totalitatea elementelor ei componente si relatiile dintre acestea privite in interdependenta si integralitatea lor. </string>
    <string name="li_asigurari"><b><li>Asigurarea:</li></b> este un mijloc de protecție împotriva pierderilor financiare. Este o formă de gestionare a riscurilor, utilizată în principal pentru a se asigura împotriva riscului unei pierderi contingente sau incerte.O entitate care oferă asigurare este cunoscută ca asigurător, societate de asigurare, transportator de asigurări sau subscriptor. O persoană sau entitate care cumpără asigurare este cunoscută ca asigurată sau ca titular de poliță de asigurare. Tranzacția de asigurare implică asigurarea presupunând o pierdere relativ redusă, garantată și cunoscută, sub forma plății către asigurător, în schimbul promisiunii asigurătorului de a compensa asiguratul în cazul unei pierderi acoperite. Pierderea poate fi sau nu financiară, dar trebuie să fie redusă la termeni financiari și de obicei implică ceva în care asiguratul are un interes asigurător stabilit prin proprietate, posesie sau relație preexistentă.</string>
    <string name="cantitate">Cantitate :</string>
    <string name="rezultat">Rezultat :</string>
    <string name="nume_produs">Nume produs</string>
    <string name="pret">Pret :</string>
    <string name="rezultat_acumulat">Rezultat Acumulat :</string>
    <string name="descriere">descriere</string>
    <string name="produs">Produs:</string>
    <string name="warning_text">** Campurile ce nu vor avea valori vor fi lasate goale (nu este nevoie sa adaugati valoarea 0)</string>
    <string name="imagina_i_v_o_companie_american_care_construie_te_o_fabric_de_tricouri_n_vietnam_n_acest_caz_ceea_ce_produce_aceast_fabric_va_fi_num_rat_n_pnb_sua_dar_nu_i_n_pnb_vietnam_deoarece_de_i_acesta_din_urm_este_locul_de_produc_ie_compania_este_sua_pe_de_alt_parte_produc_ia_acestei_fabrici_va_fi_luat_n_calcul_n_pib_ul_vietnamului_dar_nu_n_pib_ul_statelor_unite">Imaginați-vă o companie americană care construiește o fabrică de tricouri în Vietnam. În acest caz, ceea ce produce această fabrică va fi numărat în PNB SUA, dar nu și în PNB Vietnam, deoarece, deși acesta din urmă este locul de producție, compania este SUA. Pe de altă parte, producția acestei fabrici va fi luată în calcul în PIB-ul Vietnamului, dar nu în PIB-ul Statelor Unite.</string>
    <string name="produsul_national_brut_pnb"><li>Produsul national brut (PNB):</li></string>
    <string name="este_suma_preturilor_finale_ale_tuturor_bunurilor_si_serviciilor_produse_de_o_tara_intr_o_anumita_perioada_de_obicei_un_an_utilizand_resurse_proprii">Este suma preturilor finale ale tuturor bunurilor si serviciilor produse de o tara intr-o anumita perioada (de obicei un an) utilizand resurse proprii.</string>
    <string name="produsul_intern_brut_pib"><li>Produsul intern brut (PIB):</li></string>
    <string name="vezi_ce_semnifica_acesti_indicatori">Vezi ce semnifica acesti indicatori</string>
    <string name="venituri_rezidenti_din_strainatate">Venituri rezidenti din strainatate</string>
    <string name="venituri_rezidenti_straini">Venituri rezidenti straini</string>
    <string name="inventar_nou">Inventar nou</string>
    <string name="sterge">Sterge</string>
    <string name="_0">0</string>
    <string name="scrie_aici_numarul_sesiunii_facturii">Scrie aici numarul sesiunii/ facturii</string>
    <string name="selecteaza_rata_dobanzii">Selecteaza rata dobanzii (%) :</string>
    <string name="suma_imprumutata">Suma imprumutata</string>
    <string name="selecteaza_tipul_perioadei_imprumutului">Selecteaza tipul perioadei imprumutului</string>
    <string name="lunar">lunar</string>
    <string name="rata">Rata dobanzii</string>
    <string name="nr_luna_an_sem_trim">Nr luna/an/sem/trim</string>
    <string name="suma">Suma</string>
    <string name="amortizarea_actiunii">Amortizarea actiunii</string>
    <string name="introdu_nr_de_variante">Introdu nr de variante :</string>
    <string name="introdu_nr_de_sortimente">Introdu nr de sortimente :</string>
    <string name="intro_rentabilitate">Ratele de marjă se determină ca raport între diferite marje și cifra de afaceri (veniturile din exploatare care au generat aceste marje). Ele se mai numesc și rate de rentabilitate comercială.</string>
    <string name="capitaluri_proprii">Capitaluri proprii</string>
    <string name="profit_net">Profit net</string>
    <string name="active_totale">Active totale</string>
    <string name="dobanda">Dobanda</string>
    <string name="datorii">Datorii</string>
    <string name="aici_vor_aparea_rezultatele_in_urma_calculelor_executate">Aici vor aparea rezultatele in urma calculelor executate</string>
    <string name="fluxul_pretului_pe_3_zile">fluxul pretului pe 3 zile</string>
    <string name="chart_actiuni">Chart actiuni</string>
    <string name="rata_dobanzii">Rata dobanzii</string>
    <string name="rentabilitatea_actiunilor">Rentabilitatea actiunilor</string>
    <string name="rentabilitatea_financiara">Rentabilitatea financiara</string>
    <string name="sterge_inregistrarea">Sterge inregistrarea</string>
    <string name="suma_totala">Suma totala:</string>
    <string name="numar_produse">Numar produse:</string>
    <string name="sesiune_de_inventar">Sesiune de inventar:</string>
    <string name="textview">TextView</string>
    <string name="mesaj">Mesaj</string>
    <string name="perioada_imprumut_credit">Perioada imprumut credit</string>
    <string name="rata_dobanzii_credit">Rata dobanzii credit</string>
</resources>