<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginStart="10dp"
android:layout_marginEnd="10dp"
android:orientation="vertical"
android:layout_marginTop="100dp"
android:fillViewport="true"
tools:context=".macrodir.CreditDetail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<TextView
    android:id="@+id/tip_credit"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:gravity="center"
    android:textColor="@color/colorAccent"
    android:textStyle="bold"
    android:textSize="34sp"
    android:text="@string/hello_blank_fragment" />

<TextView
    android:id="@+id/rata_dobanzii_credit"
    android:text="@string/rata_dobanzii_credit"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:textSize="20sp"
    android:layout_marginTop="20dp"
    />
<TextView
    android:id="@+id/perioada_imprumut_credit"
    android:layout_width="match_parent"
    android:text="@string/perioada_imprumut_credit"
    android:gravity="center_vertical"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    />
<TextView
    android:id="@+id/descriere_tip_credit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:textSize="20sp"
    android:text="@string/descriere"
    />
    </LinearLayout>

</ScrollView>