<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:cardElevation="10sp"
    app:cardCornerRadius="10sp"
    android:layout_marginTop="20sp"
    android:layout_marginStart="15sp"
    android:layout_marginEnd="15sp"
    android:id="@+id/date_produs">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10sp"
        android:layout_marginVertical="10sp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/numeProdusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/produs"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/cantitateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:text="@string/cantitate"
                />
            <TextView
                android:id="@+id/pretText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:text="@string/pret"
                />
            <TextView
                android:id="@+id/rezultatText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:text="@string/rezultat"
                />
            <TextView
                android:id="@+id/rezultat_acumulatText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:text="@string/rezultat_acumulat"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10sp"
        android:layout_marginVertical="10sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="250sp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/nume_produs_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cantitate_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:text="@string/_0_00" />

            <TextView
                android:id="@+id/pret_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:text="@string/_0_00" />

            <TextView
                android:id="@+id/rezultat_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:text="@string/_0_00" />

            <TextView
                android:id="@+id/rezultat_acumulat_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:text="@string/_0_00" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="250sp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

    </LinearLayout>

    <Button
        android:id="@+id/sterge_produs"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/sterge"
        android:textAllCaps="false" />

</androidx.cardview.widget.CardView>