<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".microdir.InfoMicroFragment"
    android:layout_marginStart="20sp"
    android:layout_marginEnd="10sp"
    android:layout_marginTop="80sp"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <TextView
            android:id="@+id/infomicrotop"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center"
            android:text="@string/utilitatile_microeconomiei"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/T1"
            app:layout_constraintStart_toStartOf="@+id/T1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/T1"
            android:layout_width="wrap_content"
            android:layout_height="270dp"
            android:layout_marginTop="35sp"
            android:text="@string/content_info"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/infomicrotop" />
        <TextView
            android:id="@+id/T2"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/T1"
            android:text="@string/li_inventar"
            android:layout_marginTop="25sp"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/T3"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/T2"
            android:text="@string/li_rentabilitate"
            android:textSize="16sp"
            android:layout_marginTop="25sp"
            />
        <TextView
            android:id="@+id/T4"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/T3"
            android:text="@string/li_cost_de_oportunitate"
            android:textSize="16sp"
            android:layout_marginTop="25sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>