<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".macrodir.BancaFragment">


    <TextView
        android:id="@+id/topbartext2"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:gravity="center"
        android:text="@string/afla_ce_iti_poate_oferi_banca"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="234dp"
        android:layout_height="60dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="89dp"
        android:backgroundTint="@android:color/system_accent1_800"
        android:text="@string/profit_investitii"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbartext2"
        tools:targetApi="s" />

    <Button
        android:id="@+id/button2"
        android:layout_width="234dp"
        android:layout_height="60dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="89dp"
        android:backgroundTint="@android:color/system_accent1_800"
        android:text="@string/imprumuturi"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:targetApi="s" />

    <Button
        android:layout_width="234dp"
        android:layout_height="60dp"

        android:layout_marginStart="88dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="89dp"
        android:backgroundTint="@android:color/system_accent1_800"
        android:text="@string/credite"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:targetApi="s" />

</androidx.constraintlayout.widget.ConstraintLayout>